--- a/examples/playground/package.json
+++ b/examples/playground/package.json
@@ -21,5 +21,5 @@
 		"alpinejs": "^3.13.10",
 		"shiki": "^1.1.2"
 	},
-	"repository": "https://github.com/andeeplus/ecopages.git"
+	"repository": "https://github.com/ecopages/ecopages.git"
 }
