--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,8 +13,11 @@
 		"url": "https://github.com/ecopages/ecopages.git",
 		"directory": "packages/core"
 	},
+	"scripts": {
+		"release:jsr": " bunx jsr publish --dry-run --allow-dirty"
+	},
 	"dependencies": {
-		"@ecopages/logger": "workspace:*",
+		"@ecopages/logger": "^0.1.1",
 		"@ecopages/postcss-processor": "workspace:*",
 		"@ecopages/bun-inline-css-plugin": "workspace:*",
 		"@parcel/watcher": "^2.4.0",
