--- a/packages/integrations/kitajs/package.json
+++ b/packages/integrations/kitajs/package.json
@@ -11,12 +11,15 @@
 		"url": "https://github.com/ecopages/ecopages.git",
 		"directory": "packages/integrations/kitajs"
 	},
+	"scripts": {
+		"release:jsr": " bunx jsr publish --dry-run --allow-dirty"
+	},
 	"dependencies": {
 		"@kitajs/html": "^4.1.0",
 		"@kitajs/ts-html-plugin": "^4.0.1"
 	},
 	"peerDependencies": {
 		"@ecopages/core": "workspace:*",
-		"@ecopages/logger": "workspace:*"
+		"@ecopages/logger": "^0.1.1"
 	}
 }
