--- a/packages/integrations/lit/package.json
+++ b/packages/integrations/lit/package.json
@@ -11,12 +11,15 @@
 		"url": "https://github.com/ecopages/ecopages.git",
 		"directory": "packages/integrations/lit"
 	},
+	"scripts": {
+		"release:jsr": " bunx jsr publish --dry-run --allow-dirty"
+	},
 	"dependencies": {
 		"@lit-labs/ssr": "^3.2.2",
 		"lit": "^3.1.3"
 	},
 	"peerDependencies": {
 		"@ecopages/core": "workspace:*",
-		"@ecopages/logger": "workspace:*"
+		"@ecopages/logger": "^0.1.1"
 	}
 }
