--- a/packages/plugins/bun-inline-css-plugin/package.json
+++ b/packages/plugins/bun-inline-css-plugin/package.json
@@ -10,8 +10,11 @@
 		"url": "https://github.com/ecopages/ecopages.git",
 		"directory": "packages/plugins/bun-inline-css-plugin"
 	},
+	"scripts": {
+		"release:jsr": " bunx jsr publish --dry-run --allow-dirty"
+	},
 	"dependencies": {
-		"@ecopages/logger": "workspace:*"
+		"@ecopages/logger": "^0.1.1"
 	},
 	"devDependencies": {
 		"@ecopages/postcss-processor": "workspace:*"
