--- a/packages/processors/postcss-processor/package.json
+++ b/packages/processors/postcss-processor/package.json
@@ -10,8 +10,11 @@
 		"url": "https://github.com/ecopages/ecopages.git",
 		"directory": "packages/processors/postcss-processor"
 	},
+	"scripts": {
+		"release:jsr": " bunx jsr publish --dry-run --allow-dirty"
+	},
 	"dependencies": {
-		"@ecopages/logger": "workspace:*",
+		"@ecopages/logger": "^0.1.1",
 		"@types/postcss-import": "^14.0.3",
 		"autoprefixer": "^10.4.16",
 		"bun-types": "latest",
@@ -19,5 +22,9 @@
 		"postcss": "^8.4.32",
 		"postcss-import": "^15.1.0",
 		"tailwindcss": "^3.4.1"
+	},
+	"exports": {
+		".": "./src/postcss-processor.ts",
+		"./default-plugins": "./src/default-plugins.ts"
 	}
 }
