--- a/package.json
+++ b/package.json
@@ -2,28 +2,29 @@
 	"name": "@ecopages/ecopages",
 	"private": true,
 	"scripts": {
-		"watch:dev:playground": "bun run --filter @ecopages/playground watch:dev",
+		"watch:dev:playground": "bun run --filter @ecopages/playground watch:dev | tee /dev/null",
 		"dev:playground": "bun run --filter @ecopages/playground dev | tee /dev/null",
 		"build:playground": "bun run --filter @ecopages/playground build",
 		"start:playground": "bun run --filter @ecopages/playground start",
 		"preview:playground": "bun run --filter @ecopages/playground preview",
-		"dev:starter": "bun run --filter @ecopages/starter dev",
+		"dev:starter": "bun run --filter @ecopages/starter dev | tee /dev/null",
 		"build:starter": "bun run --filter @ecopages/starter build",
 		"start:starter": "bun run --filter @ecopages/starter start",
 		"preview:starter": "bun run --filter @ecopages/starter preview",
-		"dev:docs": "bun run --filter @ecopages/docs dev",
+		"dev:docs": "bun run --filter @ecopages/docs dev | tee /dev/null",
 		"build:docs": "bun run --filter @ecopages/docs build",
 		"start:docs": "bun run --filter @ecopages/docs start",
 		"preview:docs": "bun run --filter @ecopages/docs preview",
-		"dev:docs-radiant": "bun run --filter @ecopages/docs-radiant dev",
+		"dev:docs-radiant": "bun run --filter @ecopages/docs-radiant dev | tee /dev/null",
 		"build:docs-radiant": "bun run --filter @ecopages/docs-radiant build",
 		"start:docs-radiant": "bun run --filter @ecopages/docs-radiant start",
 		"preview:docs-radiant": "bun run --filter @ecopages/docs-radiant preview",
-		"dev:radiant-ui": "bun run --filter @ecopages/radiant-ui dev",
+		"dev:radiant-ui": "bun run --filter @ecopages/radiant-ui dev | tee /dev/null",
 		"build:radiant-ui": "bun run --filter @ecopages/radiant-ui build",
 		"start:radiant-ui": "bun run --filter @ecopages/radiant-ui start",
 		"preview:radiant-ui": "bun run --filter @ecopages/radiant-ui preview",
-		"dev:react-app": "bun run --filter @ecopages/react-app dev",
+		"watch:dev:react-app": "bun run --filter @ecopages/react-app watch:dev | tee /dev/null",
+		"dev:react-app": "bun run --filter @ecopages/react-app dev | tee /dev/null",
 		"build:react-app": "bun run --filter @ecopages/react-app build",
 		"start:react-app": "bun run --filter @ecopages/react-app start",
 		"preview:react-app": "bun run --filter @ecopages/react-app preview",
