--- a/examples/react-app/package.json
+++ b/examples/react-app/package.json
@@ -2,6 +2,7 @@
 	"name": "@ecopages/react-app",
 	"private": true,
 	"scripts": {
+		"watch:dev": "bun --watch ../../node_modules/@ecopages/core/src/main/build-app.ts --watch-lib",
 		"dev": "ecopages dev",
 		"build": "ecopages build",
 		"start": "ecopages start",
