feat(#44) Reinstated Bun.glob and removed external deps + minor updates

--- a/examples/react-app/package.json
+++ b/examples/react-app/package.json
@@ -14,13 +14,15 @@
 		"@ecopages/mdx": "workspace:*",
 		"@ecopages/bun-mdx-loader": "workspace:*",
 		"@ecopages/bun-postcss-loader": "workspace:*",
-		"@types/react": "npm:types-react@beta",
-		"@types/react-dom": "npm:types-react-dom@beta",
-		"react": "19.0.0-beta-26f2496093-20240514",
-		"react-dom": "19.0.0-beta-26f2496093-20240514"
+		"@types/react": "npm:types-react@rc",
+		"@types/react-dom": "npm:types-react-dom@rc"
 	},
 	"overrides": {
-		"@types/react": "npm:types-react@beta",
-		"@types/react-dom": "npm:types-react-dom@beta"
+		"@types/react": "npm:types-react@rc",
+		"@types/react-dom": "npm:types-react-dom@rc"
+	},
+	"dependencies": {
+		"react": "19.0.0-rc-58af67a8f8-20240628",
+		"react-dom": "19.0.0-rc-58af67a8f8-20240628"
 	}
 }
