--- a/apps/radiant-ui/.env.example
+++ b/apps/radiant-ui/.env.example
@@ -1,2 +1,2 @@
-ECO_PAGES_BASE_URL=http://localhost:3000
-ECO_PAGES_DEBUG=false
+ECOPAGES_BASE_URL=http://localhost:3000
+ECOPAGES_LOGGER_DEBUG=false
