feat(#44) This update prepares the package for public release

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,9 @@
 {
 	"$schema": "https://unpkg.com/@changesets/config@3.0.1/schema.json",
-	"changelog": ["@changesets/changelog-github", { "repo": "ecopages/radiant" }],
+	"changelog": [
+		"@changesets/changelog-github",
+		{ "repo": "ecopages/ecopages" }
+	],
 	"commit": false,
 	"fixed": [["@ecopages/*"]],
 	"linked": [],
