--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
 		"format": "bunx @biomejs/biome format --write .",
 		"lint": "bunx @biomejs/biome check --apply .",
 		"lint-staged": "lint-staged",
+		"jsr:sync-version": "bun scripts/sync-package-version.ts",
 		"changeset": "changeset",
-		"prerelease": "bun test",
-		"release": "changeset publish",
-		"test:suite": "bun run --filter '*' test"
+		"prerelease": "bun run test:suite && bun run jsr:sync-version",
+		"release": "bun run --filter '*' release:jsr | tee /dev/null",
+		"test:suite": "bun run --filter '*' test | tee /dev/null"
 	},
 	"devDependencies": {
 		"@changesets/changelog-github": "^0.5.0",
