--- a/packages/integrations/lit/package.json
+++ b/packages/integrations/lit/package.json
@@ -12,7 +12,7 @@
 		"directory": "packages/integrations/lit"
 	},
 	"scripts": {
-		"release:jsr": " bunx jsr publish --dry-run --allow-dirty"
+		"release:jsr": " bunx jsr publish --dry-run"
 	},
 	"dependencies": {
 		"@lit-labs/ssr": "^3.2.2",
