--- a/packages/integrations/react/package.json
+++ b/packages/integrations/react/package.json
@@ -12,7 +12,7 @@
 		"directory": "packages/integrations/react"
 	},
 	"scripts": {
-		"release:jsr": " bunx jsr publish --dry-run --allow-dirty"
+		"release:jsr": " bunx jsr publish --dry-run"
 	},
 	"peerDependencies": {
 		"@ecopages/core": "workspace:*",
