--- a/packages/loaders/bun-postcss-loader/package.json
+++ b/packages/loaders/bun-postcss-loader/package.json
@@ -11,7 +11,7 @@
 		"directory": "packages/loaders/bun-postcss-loader"
 	},
 	"scripts": {
-		"release:jsr": " bunx jsr publish --dry-run --allow-dirty"
+		"release:jsr": " bunx jsr publish --dry-run"
 	},
 	"dependencies": {
 		"@ecopages/postcss-processor": "workspace:*"
