--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@ecopages/ecopages",
 	"private": true,
+	"version": "0.1.0",
 	"scripts": {
 		"watch:dev:playground": "bun run --filter @ecopages/playground watch:dev | tee /dev/null",
 		"dev:playground": "bun run --filter @ecopages/playground dev | tee /dev/null",
@@ -34,14 +35,11 @@
 		"lint": "bunx @biomejs/biome check --apply .",
 		"lint-staged": "lint-staged",
 		"jsr:sync-version": "bun scripts/sync-package-version.ts",
-		"changeset": "changeset",
 		"prerelease": "bun run test:suite && bun run jsr:sync-version",
 		"release": "bun run --filter '*' release:jsr | tee /dev/null",
 		"test:suite": "bun run --filter '*' test | tee /dev/null"
 	},
 	"devDependencies": {
-		"@changesets/changelog-github": "^0.5.0",
-		"@changesets/cli": "^2.27.5",
 		"husky": "^9.0.10",
 		"lint-staged": "^15.2.2"
 	},
