--- a/packages/plugins/bun-inline-css-plugin/package.json
+++ b/packages/plugins/bun-inline-css-plugin/package.json
@@ -12,7 +12,7 @@
 	},
 	"scripts": {
 		"test": "bun test",
-		"release:jsr": " bunx jsr publish --dry-run"
+		"release:jsr": " bunx jsr publish"
 	},
 	"devDependencies": {
 		"@ecopages/postcss-processor": "workspace:*"
