Added keywords and description where missing in packages, minor adjustments

--- a/apps/docs-radiant/bunfig.toml
+++ b/apps/docs-radiant/bunfig.toml
@@ -1,1 +1,1 @@
-preload = ["@ecopages/bun-postcss-loader", "@ecopages/bun-mdx-loader"]
+preload = ["@ecopages/bun-postcss-loader", "@ecopages/bun-mdx-kitajs-loader"]
