--- a/examples/react-app/package.json
+++ b/examples/react-app/package.json
@@ -12,7 +12,7 @@
 		"@ecopages/core": "workspace:*",
 		"@ecopages/react": "workspace:*",
 		"@ecopages/mdx": "workspace:*",
-		"@ecopages/bun-mdx-loader": "workspace:*",
+		"@ecopages/bun-mdx-kitajs-loader": "workspace:*",
 		"@ecopages/bun-postcss-loader": "workspace:*",
 		"@types/react": "npm:types-react@rc",
 		"@types/react-dom": "npm:types-react-dom@rc"
