--- a/apps/docs/bunfig.toml
+++ b/apps/docs/bunfig.toml
@@ -1,1 +1,1 @@
-preload = ["@ecopages/bun-postcss-loader", "@ecopages/bun-mdx-loader"]
+preload = ["@ecopages/bun-postcss-loader", "@ecopages/bun-mdx-kitajs-loader"]
