--- a/bunfig.toml
+++ b/bunfig.toml
@@ -1,6 +1,6 @@
-preload = ["@ecopages/bun-postcss-loader", "@ecopages/bun-mdx-loader"]
+preload = ["@ecopages/bun-postcss-loader", "@ecopages/bun-mdx-kitajs-loader"]
 
 [test]
-preload = ["@ecopages/bun-postcss-loader", "@ecopages/bun-mdx-loader"]
+preload = ["@ecopages/bun-postcss-loader", "@ecopages/bun-mdx-kitajs-loader"]
 [install.scopes]
 "@jsr" = "https://npm.jsr.io"
