--- a/examples/starter/package.json
+++ b/examples/starter/package.json
@@ -13,7 +13,7 @@
 		"@ecopages/kitajs": "workspace:*",
 		"@ecopages/lit": "workspace:*",
 		"@ecopages/mdx": "workspace:*",
-		"@ecopages/bun-mdx-loader": "workspace:*",
+		"@ecopages/bun-mdx-kitajs-loader": "workspace:*",
 		"@ecopages/bun-postcss-loader": "workspace:*"
 	}
 }
