--- a/packages/integrations/mdx/package.json
+++ b/packages/integrations/mdx/package.json
@@ -1,6 +1,8 @@
 {
 	"name": "@ecopages/mdx",
 	"version": "0.1.0",
+	"description": "MDX plugin for Ecopages",
+	"keywords": ["ecopages", "mdx", "plugin"],
 	"license": "MIT",
 	"main": "./src/mdx.plugin.ts",
 	"types": "./src/mdx.plugin.ts",
@@ -12,7 +14,7 @@
 		"directory": "packages/integrations/mdx"
 	},
 	"scripts": {
-		"release:jsr": " bunx jsr publish --dry-run"
+		"release:jsr": "bunx jsr publish"
 	},
 	"peerDependencies": {
 		"@kitajs/html": "^4.1.0",
