--- a/packages/integrations/react/package.json
+++ b/packages/integrations/react/package.json
@@ -1,6 +1,8 @@
 {
 	"name": "@ecopages/react",
 	"version": "0.0.0",
+	"description": "React integration for Ecopages",
+	"keywords": ["ecopages", "react", "plugin"],
 	"license": "MIT",
 	"main": "./src/react.plugin.ts",
 	"types": "./src/react.plugin.ts",
@@ -10,9 +12,6 @@
 		"type": "git",
 		"url": "https://github.com/ecopages/ecopages.git",
 		"directory": "packages/integrations/react"
-	},
-	"scripts": {
-		"release:jsr": " bunx jsr publish --dry-run"
 	},
 	"peerDependencies": {
 		"@ecopages/core": "workspace:*",
