--- a/packages/loaders/bun-mdx-kitajs-loader/tsconfig.json
+++ b/packages/loaders/bun-mdx-kitajs-loader/tsconfig.json
@@ -6,6 +6,8 @@
 		"esModuleInterop": true,
 		"module": "ESNext",
 		"moduleResolution": "Bundler",
+		"jsx": "react-jsx",
+		"jsxImportSource": "@kitajs/html",
 		"noImplicitOverride": true,
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
