--- a/packages/integrations/mdx/package.json
+++ b/packages/integrations/mdx/package.json
@@ -18,7 +18,7 @@
 	},
 	"peerDependencies": {
 		"@kitajs/html": "^4.1.0",
-		"@ecopages/core": "workspace:*",
+		"@ecopages/core": "npm:@jsr/ecopages__postcss-processor@latest",
 		"@ecopages/logger": "^0.1.1"
 	}
 }
