--- a/packages/integrations/mdx/package.json
+++ b/packages/integrations/mdx/package.json
@@ -18,7 +18,10 @@
 	},
 	"peerDependencies": {
 		"@kitajs/html": "^4.1.0",
-		"@ecopages/core": "npm:@jsr/ecopages__core@latest",
+		"@ecopages/core": "workspace:*",
 		"@ecopages/logger": "^0.1.1"
+	},
+	"devDependencies": {
+		"@ecopages/core": "npm:@jsr/ecopages__core@latest"
 	}
 }
