--- a/packages/integrations/lit/package.json
+++ b/packages/integrations/lit/package.json
@@ -21,7 +21,10 @@
 		"lit": "^3.1.3"
 	},
 	"peerDependencies": {
-		"@ecopages/core": "npm:@jsr/ecopages__core@latest",
+		"@ecopages/core": "workspace:*",
 		"@ecopages/logger": "^0.1.1"
+	},
+	"devDependencies": {
+		"@ecopages/core": "npm:@jsr/ecopages__core@latest"
 	}
 }
