Cleaned up ecopages types and splitted in two categories, internals and public

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -10,8 +10,7 @@
 		"moduleResolution": "Bundler",
 		"noImplicitOverride": true,
 		"paths": {
-			"@/*": ["./src/*"],
-			"@types": ["src/index.d.ts"]
+			"@/*": ["./src/*"]
 		},
 		"jsx": "react-jsx",
 		"jsxImportSource": "@kitajs/html",
