--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,7 +17,7 @@
 	},
 	"scripts": {
 		"test": "bun test",
-		"release:jsr": "bunx jsr publish --allow-slow-types"
+		"release:jsr": "bunx jsr publish"
 	},
 	"dependencies": {
 		"@ecopages/bun-inline-css-plugin": "workspace:*",
