--- a/packages/integrations/kitajs/package.json
+++ b/packages/integrations/kitajs/package.json
@@ -26,6 +26,6 @@
 		"@ecopages/logger": "^0.1.1"
 	},
 	"devDependencies": {
-		"@ecopages/core": "npm:@jsr/ecopages__core@latest"
+		"@ecopages/core": "workspace:*"
 	}
 }
