--- a/packages/integrations/lit/package.json
+++ b/packages/integrations/lit/package.json
@@ -21,10 +21,7 @@
 		"lit": "^3.1.3"
 	},
 	"peerDependencies": {
-		"@ecopages/core": "workspace:*",
+		"@ecopages/core": "npm:@jsr/ecopages__core@latest",
 		"@ecopages/logger": "^0.1.1"
-	},
-	"devDependencies": {
-		"@ecopages/core": "npm:@jsr/ecopages__core@latest"
 	}
 }
