--- a/packages/integrations/kitajs/tsconfig.json
+++ b/packages/integrations/kitajs/tsconfig.json
@@ -1,6 +1,8 @@
 {
 	"compilerOptions": {
 		"allowSyntheticDefaultImports": true,
+		"allowImportingTsExtensions": true,
+		"noEmit": true,
 		"baseUrl": ".",
 		"outDir": "./dist",
 		"esModuleInterop": true,
@@ -11,9 +13,6 @@
 		"module": "ESNext",
 		"moduleResolution": "node",
 		"noImplicitOverride": true,
-		"paths": {
-			"@/*": ["./src/*"]
-		},
 		"plugins": [
 			{
 				"name": "@kitajs/ts-html-plugin"
