Feature/44 jsr fixes (#46)
* Added relative imports to files

* Removed in full alias path from core package

* Added allowImportingTsExtensions

* bump patch version 0.1.3

---------

Co-authored-by: Andrea Zanenghi <andeeplus@gmail.com>

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,6 +1,8 @@
 {
 	"compilerOptions": {
 		"allowSyntheticDefaultImports": true,
+		"allowImportingTsExtensions": true,
+		"noEmit": true,
 		"baseUrl": ".",
 		"rootDir": ".",
 		"esModuleInterop": true,
@@ -9,9 +11,6 @@
 		"module": "ESNext",
 		"moduleResolution": "Bundler",
 		"noImplicitOverride": true,
-		"paths": {
-			"@/*": ["./src/*"]
-		},
 		"jsx": "react-jsx",
 		"jsxImportSource": "@kitajs/html",
 		"resolveJsonModule": true,
