--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,8 +27,8 @@ jobs:
       # - name: Publish package @ecopages/postcss-processor
       #   run: bun run --filter @ecopages/postcss-processor release:jsr
 
-      - name: Publish package @ecopages/bun-inline-css-plugin
-        run: bun run --filter @ecopages/bun-inline-css-plugin release:jsr
+      # - name: Publish package @ecopages/bun-inline-css-plugin
+      #   run: bun run --filter @ecopages/bun-inline-css-plugin release:jsr
 
       - name: Publish package @ecopages/bun-postcss-loader
         run: bun run --filter @ecopages/bun-postcss-loader release:jsr
