Added direct dep to bun postcss-loader using jsr npm mirror

--- a/packages/loaders/bun-postcss-loader/package.json
+++ b/packages/loaders/bun-postcss-loader/package.json
@@ -16,6 +16,6 @@
 		"release:jsr": "bunx jsr publish"
 	},
 	"dependencies": {
-		"@ecopages/postcss-processor": "@jsr/ecopages__postcss-processor@latest"
+		"@ecopages/postcss-processor": "npm:@jsr/ecopages__postcss-processor@latest"
 	}
 }
