--- a/packages/integrations/lit/package.json
+++ b/packages/integrations/lit/package.json
@@ -21,7 +21,7 @@
 		"lit": "^3.1.3"
 	},
 	"peerDependencies": {
-		"@ecopages/core": "workspace:*",
+		"@ecopages/core": "npm:@jsr/ecopages__postcss-processor@latest",
 		"@ecopages/logger": "^0.1.1"
 	}
 }
