--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,20 +24,20 @@ jobs:
       - name: Test
         run: bun run test:suite
 
-      # - name: Publish package @ecopages/postcss-processor
-      #   run: bun run --filter @ecopages/postcss-processor release:jsr
+      - name: Publish package @ecopages/postcss-processor
+        run: bun run --filter @ecopages/postcss-processor release:jsr
 
-      # - name: Publish package @ecopages/bun-inline-css-plugin
-      #   run: bun run --filter @ecopages/bun-inline-css-plugin release:jsr
+      - name: Publish package @ecopages/bun-inline-css-plugin
+        run: bun run --filter @ecopages/bun-inline-css-plugin release:jsr
 
-      # - name: Publish package @ecopages/bun-postcss-loader
-      #   run: bun run --filter @ecopages/bun-postcss-loader release:jsr
+      - name: Publish package @ecopages/bun-postcss-loader
+        run: bun run --filter @ecopages/bun-postcss-loader release:jsr
 
-      # - name: Publish package @ecopages/bun-mdx-kitajs-loader
-      #   run: bun run --filter @ecopages/bun-mdx-kitajs-loader release:jsr
+      - name: Publish package @ecopages/bun-mdx-kitajs-loader
+        run: bun run --filter @ecopages/bun-mdx-kitajs-loader release:jsr
 
-      # - name: Publish package @ecopages/core
-      #   run: bun run --filter @ecopages/core release:jsr
+      - name: Publish package @ecopages/core
+        run: bun run --filter @ecopages/core release:jsr
 
       - name: Publish package @ecopages/kitajs
         run: bun run --filter @ecopages/kitajs release:jsr
