--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ecopages/core",
-	"version": "0.1.5",
+	"version": "0.1.6",
 	"description": "Core package for Ecopages",
 	"keywords": ["ecopages", "core", "ssg"],
 	"license": "MIT",
@@ -20,9 +20,9 @@
 		"release:jsr": "bunx jsr publish"
 	},
 	"dependencies": {
-		"@ecopages/bun-inline-css-plugin": "workspace:*",
+		"@ecopages/bun-inline-css-plugin": "npm:@jsr/ecopages__bun-inline-css-plugin",
 		"@ecopages/logger": "^0.1.2",
-		"@ecopages/postcss-processor": "workspace:*",
+		"@ecopages/postcss-processor": "npm:@jsr/ecopages__postcss-processor",
 		"@parcel/watcher": "^2.4.0"
 	},
 	"devDependencies": {
