--- a/packages/integrations/lit/package.json
+++ b/packages/integrations/lit/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ecopages/lit",
-	"version": "0.1.5",
+	"version": "0.1.6",
 	"description": "Ecopages lit integration",
 	"keywords": ["ecopages", "lit", "plugin"],
 	"license": "MIT",
@@ -21,10 +21,7 @@
 		"lit": "^3.1.3"
 	},
 	"peerDependencies": {
-		"@ecopages/core": "workspace:*",
+		"@ecopages/core": "npm:@jsr/ecopages__core",
 		"@ecopages/logger": "^0.1.1"
-	},
-	"devDependencies": {
-		"@ecopages/core": "npm:@jsr/ecopages__core@latest"
 	}
 }
