--- a/packages/plugins/bun-inline-css-plugin/package.json
+++ b/packages/plugins/bun-inline-css-plugin/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ecopages/bun-inline-css-plugin",
-	"version": "0.1.5",
+	"version": "0.1.6",
 	"license": "MIT",
 	"description": "Bun plugin to inline css",
 	"keywords": ["bun", "plugin", "inline-css"],
@@ -17,6 +17,7 @@
 		"release:jsr": "bunx jsr publish"
 	},
 	"devDependencies": {
-		"@ecopages/postcss-processor": "workspace:*"
+		"@ecopages/postcss-processor": "npm:@jsr/ecopages__postcss-processor",
+		"@ecopages/logger": "^0.1.2"
 	}
 }
