--- a/packages/integrations/mdx/package.json
+++ b/packages/integrations/mdx/package.json
@@ -19,6 +19,6 @@
 	"peerDependencies": {
 		"@kitajs/html": "^4.1.0",
 		"@ecopages/logger": "^0.1.1",
-		"@ecopages/core": "npm:@jsr/ecopages__core"
+		"@ecopages/core": "npm:@jsr/ecopages__core@latest"
 	}
 }
