--- a/packages/integrations/kitajs/package.json
+++ b/packages/integrations/kitajs/package.json
@@ -19,10 +19,10 @@
 	},
 	"dependencies": {
 		"@kitajs/html": "^4.1.0",
-		"@kitajs/ts-html-plugin": "^4.0.1"
+		"@kitajs/ts-html-plugin": "^4.0.1",
+		"@ecopages/core": "npm:@jsr/ecopages__core@latest"
 	},
 	"peerDependencies": {
-		"@ecopages/core": "npm:@jsr/ecopages__core@latest",
 		"@ecopages/logger": "^0.1.1"
 	}
 }
