--- a/packages/integrations/mdx/package.json
+++ b/packages/integrations/mdx/package.json
@@ -16,9 +16,11 @@
 	"scripts": {
 		"release:jsr": "bunx jsr publish"
 	},
+	"dependencies": {
+		"@ecopages/core": "npm:@jsr/ecopages__core@latest"
+	},
 	"peerDependencies": {
 		"@kitajs/html": "^4.1.0",
-		"@ecopages/logger": "^0.1.1",
-		"@ecopages/core": "npm:@jsr/ecopages__core@latest"
+		"@ecopages/logger": "^0.1.1"
 	}
 }
