--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,9 +20,9 @@
 		"release:jsr": "bunx jsr publish"
 	},
 	"dependencies": {
-		"@ecopages/bun-inline-css-plugin": "npm:@jsr/ecopages__bun-inline-css-plugin@latest",
+		"@ecopages/bun-inline-css-plugin": "workspace:*",
 		"@ecopages/logger": "^0.1.2",
-		"@ecopages/postcss-processor": "npm:@jsr/ecopages__postcss-processor@latest",
+		"@ecopages/postcss-processor": "workspace:*",
 		"@parcel/watcher": "^2.4.0"
 	},
 	"devDependencies": {
