--- a/packages/integrations/lit/package.json
+++ b/packages/integrations/lit/package.json
@@ -17,11 +17,10 @@
 		"release:jsr": "bunx jsr publish"
 	},
 	"dependencies": {
-		"@ecopages/core": "npm:@jsr/ecopages__core@latest",
 		"@lit-labs/ssr": "^3.2.2",
 		"lit": "^3.1.3"
 	},
 	"peerDependencies": {
-		"@ecopages/logger": "^0.1.1"
+		"@ecopages/core": "workspace:*"
 	}
 }
