--- a/packages/processors/postcss-processor/package.json
+++ b/packages/processors/postcss-processor/package.json
@@ -18,13 +18,13 @@
 	},
 	"dependencies": {
 		"@ecopages/logger": "^0.1.2",
-		"@types/postcss-import": "^14.0.3",
-		"autoprefixer": "^10.4.16",
+		"@types/postcss-import": "14.0.3",
+		"autoprefixer": "10.4.19",
 		"bun-types": "latest",
-		"cssnano": "^6.0.2",
-		"postcss": "^8.4.32",
-		"postcss-import": "^15.1.0",
-		"tailwindcss": "^3.4.1"
+		"cssnano": "6.1.2",
+		"postcss": "8.4.39",
+		"postcss-import": "15.1.0",
+		"tailwindcss": "3.4.4"
 	},
 	"exports": {
 		".": "./src/postcss-processor.ts",
