--- a/packages/loaders/bun-postcss-loader/package.json
+++ b/packages/loaders/bun-postcss-loader/package.json
@@ -13,6 +13,7 @@
 		"directory": "packages/loaders/bun-postcss-loader"
 	},
 	"scripts": {
+		"test:suite": "bun test --coverage",
 		"release:jsr": "bunx jsr publish"
 	},
 	"dependencies": {
