--- a/packages/processors/postcss-processor/package.json
+++ b/packages/processors/postcss-processor/package.json
@@ -13,7 +13,7 @@
 		"directory": "packages/processors/postcss-processor"
 	},
 	"scripts": {
-		"test": "bun test",
+		"test:suite": "bun test --coverage",
 		"release:jsr": "bunx jsr publish"
 	},
 	"dependencies": {
