--- a/package.json
+++ b/package.json
@@ -5,30 +5,22 @@
 	"scripts": {
 		"watch:dev:playground": "bun run --filter @ecopages/playground watch:dev | tee /dev/null",
 		"dev:playground": "bun run --filter @ecopages/playground dev | tee /dev/null",
-		"build:playground": "bun run --filter @ecopages/playground build",
-		"start:playground": "bun run --filter @ecopages/playground start",
-		"preview:playground": "bun run --filter @ecopages/playground preview",
+		"build:playground": "bun run --filter @ecopages/playground build | tee /dev/null",
+		"start:playground": "bun run --filter @ecopages/playground start | tee /dev/null",
+		"preview:playground": "bun run --filter @ecopages/playground preview | tee /dev/null",
 		"watch:dev:starter": "bun run --filter @ecopages/starter watch:dev | tee /dev/null",
 		"dev:starter": "bun run --filter @ecopages/starter dev | tee /dev/null",
-		"build:starter": "bun run --filter @ecopages/starter build",
-		"start:starter": "bun run --filter @ecopages/starter start",
-		"preview:starter": "bun run --filter @ecopages/starter preview",
+		"build:starter": "bun run --filter @ecopages/starter build | tee /dev/null",
+		"start:starter": "bun run --filter @ecopages/starter start | tee /dev/null",
+		"preview:starter": "bun run --filter @ecopages/starter preview | tee /dev/null",
 		"dev:docs": "bun run --filter @ecopages/docs dev | tee /dev/null",
-		"build:docs": "bun run --filter @ecopages/docs build",
-		"start:docs": "bun run --filter @ecopages/docs start",
-		"preview:docs": "bun run --filter @ecopages/docs preview",
-		"dev:docs-radiant": "bun run --filter @ecopages/docs-radiant dev | tee /dev/null",
-		"build:docs-radiant": "bun run --filter @ecopages/docs-radiant build",
-		"start:docs-radiant": "bun run --filter @ecopages/docs-radiant start",
-		"preview:docs-radiant": "bun run --filter @ecopages/docs-radiant preview",
-		"dev:radiant-ui": "bun run --filter @ecopages/radiant-ui dev | tee /dev/null",
-		"build:radiant-ui": "bun run --filter @ecopages/radiant-ui build",
-		"start:radiant-ui": "bun run --filter @ecopages/radiant-ui start",
-		"preview:radiant-ui": "bun run --filter @ecopages/radiant-ui preview",
+		"build:docs": "bun run --filter @ecopages/docs build | tee /dev/null",
+		"start:docs": "bun run --filter @ecopages/docs start | tee /dev/null",
+		"preview:docs": "bun run --filter @ecopages/docs preview | tee /dev/null",
 		"watch:dev:react-app": "bun run --filter @ecopages/react-app watch:dev | tee /dev/null",
 		"dev:react-app": "bun run --filter @ecopages/react-app dev | tee /dev/null",
-		"build:react-app": "bun run --filter @ecopages/react-app build",
-		"start:react-app": "bun run --filter @ecopages/react-app start",
+		"build:react-app": "bun run --filter @ecopages/react-app build | tee /dev/null",
+		"start:react-app": "bun run --filter @ecopages/react-app start | tee /dev/null",
 		"preview:react-app": "bun run --filter @ecopages/react-app preview | tee /dev/null",
 		"clean": "clear && rm -rf node_modules bun.lockb && bun install",
 		"format": "bunx @biomejs/biome format --write .",
