feature(#52) Added base integration for ghtml as default integration for @ecopages/core

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,7 +24,8 @@
 		"@ecopages/bun-inline-css-plugin": "workspace:*",
 		"@ecopages/logger": "^0.1.2",
 		"@ecopages/postcss-processor": "workspace:*",
-		"@parcel/watcher": "^2.4.0"
+		"@parcel/watcher": "^2.4.0",
+		"ghtml": "^2.1.2"
 	},
 	"devDependencies": {
 		"bun-types": "latest"
