feature(#52) Added css with postcss-processor behind the scene + html using ghtml in includes template on playground

--- a/examples/playground/package.json
+++ b/examples/playground/package.json
@@ -14,6 +14,7 @@
 		"@ecopages/kitajs": "workspace:*",
 		"@ecopages/lit": "workspace:*",
 		"@ecopages/mdx": "workspace:*",
+		"@ecopages/postcss-processor": "workspace:*",
 		"@ecopages/radiant": "^0.1.4",
 		"@ecopages/bun-mdx-kitajs-loader": "workspace:*",
 		"@ecopages/bun-postcss-loader": "workspace:*",
