--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,5 +29,47 @@
 	},
 	"devDependencies": {
 		"bun-types": "latest"
+	},
+	"exports": {
+		".": {
+			"import": "./src/index.ts",
+			"require": "./src/index.ts"
+		},
+		"./bin": {
+			"types": "./src/bin/ecopages.ts",
+			"default": "./src/bin/ecopages.ts"
+		},
+		"./build-app": {
+			"types": "./src/main/build-app.ts",
+			"default": "./src/main/build-app.ts"
+		},
+		"./route-renderer/integration-renderer": {
+			"types": "./src/route-renderer/integration-renderer.ts",
+			"default": "./src/route-renderer/integration-renderer.ts"
+		},
+		"./utils/add-base-url-to-pathname": {
+			"types": "./src/utils/add-base-url-to-pathname.ts",
+			"default": "./src/utils/add-base-url-to-pathname.ts"
+		},
+		"./utils/deep-merge": {
+			"types": "./src/utils/deep-merge.ts",
+			"default": "./src/utils/deep-merge.ts"
+		},
+		"./utils/invariant": {
+			"types": "./src/utils/invariant.ts",
+			"default": "./src/utils/invariant.ts"
+		},
+		"./utils/component-dependencies-utils": {
+			"types": "./src/utils/component-dependencies-utils.ts",
+			"default": "./src/utils/component-dependencies-utils.ts"
+		},
+		"./html": {
+			"import": "./src/utils/html.ts",
+			"require": "./src/utils/html.ts"
+		},
+		"./css": {
+			"import": "./src/utils/css.ts",
+			"require": "./src/utils/css.ts"
+		}
 	}
 }
