feature(#52) Added starter-ghtml and cleaned up playground

--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
 		"build:starter": "bun run --filter @ecopages/starter build | tee /dev/null",
 		"start:starter": "bun run --filter @ecopages/starter start | tee /dev/null",
 		"preview:starter": "bun run --filter @ecopages/starter preview | tee /dev/null",
+		"dev:starter-ghtml": "bun run --filter @ecopages/starter-ghtml dev | tee /dev/null",
+		"build:starter-ghtml": "bun run --filter @ecopages/starter-ghtml build | tee /dev/null",
+		"start:starter-ghtml": "bun run --filter @ecopages/starter-ghtml start | tee /dev/null",
+		"preview:starter-ghtml": "bun run --filter @ecopages/starter-ghtml preview | tee /dev/null",
 		"dev:docs": "bun run --filter @ecopages/docs dev | tee /dev/null",
 		"build:docs": "bun run --filter @ecopages/docs build | tee /dev/null",
 		"start:docs": "bun run --filter @ecopages/docs start | tee /dev/null",
