feature(#52) Added conditional to check if ghtml is present, if so it will override the defaults + fixed tests and lint staged

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
         run: bun install
 
       - name: Test
-        run: bun run test:suite
+        run: bun test
 
       - name: Publish package @ecopages/postcss-processor
         run: bun run --filter @ecopages/postcss-processor release:jsr
