--- a/packages/core/fixtures/app/package.json
+++ b/packages/core/fixtures/app/package.json
@@ -9,8 +9,7 @@
 	},
 	"devDependencies": {
 		"@ecopages/core": "workspace:*",
-		"@ecopages/kitajs": "workspace:*",
-		"@ecopages/lit": "workspace:*",
-		"@ecopages/mdx": "workspace:*"
+		"@ecopages/bun-postcss-loader": "workspace:*",
+		"@ecopages/bun-mdx-kitajs-loader": "workspace:*"
 	}
 }
