feature(#52) Updated types and added ghtml renderer test

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -5,6 +5,7 @@
 		"noEmit": true,
 		"baseUrl": ".",
 		"rootDir": ".",
+		"jsx": "react-jsx",
 		"esModuleInterop": true,
 		"experimentalDecorators": true,
 		"forceConsistentCasingInFileNames": true,
