feature(#52) Updated examples, now everything works as expected

--- a/examples/starter-lit-jsx/package.json
+++ b/examples/starter-lit-jsx/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@ecopages/starter",
+	"name": "@ecopages/starter-lit-jsx",
 	"private": true,
 	"scripts": {
 		"watch:dev": "NODE_ENV=development bun --watch ../../node_modules/@ecopages/core/src/main/build-app.ts --watch-lib",
