--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
 		"build:playground": "bun run --filter @ecopages/playground build | tee /dev/null",
 		"start:playground": "bun run --filter @ecopages/playground start | tee /dev/null",
 		"preview:playground": "bun run --filter @ecopages/playground preview | tee /dev/null",
-		"watch:dev:starter": "bun run --filter @ecopages/starter watch:dev | tee /dev/null",
-		"dev:starter": "bun run --filter @ecopages/starter dev | tee /dev/null",
-		"build:starter": "bun run --filter @ecopages/starter build | tee /dev/null",
-		"start:starter": "bun run --filter @ecopages/starter start | tee /dev/null",
-		"preview:starter": "bun run --filter @ecopages/starter preview | tee /dev/null",
+		"watch:dev:starter-lit-jsx": "bun run --filter @ecopages/starter-lit-jsx watch:dev | tee /dev/null",
+		"dev:starter-lit-jsx": "bun run --filter @ecopages/starter-lit-jsx dev | tee /dev/null",
+		"build:starter-lit-jsx": "bun run --filter @ecopages/starter-lit-jsx build | tee /dev/null",
+		"start:starter-lit-jsx": "bun run --filter @ecopages/starter-lit-jsx start | tee /dev/null",
+		"preview:starter-lit-jsx": "bun run --filter @ecopages/starter-lit-jsx preview | tee /dev/null",
 		"dev:starter-ghtml": "bun run --filter @ecopages/starter-ghtml dev | tee /dev/null",
 		"build:starter-ghtml": "bun run --filter @ecopages/starter-ghtml build | tee /dev/null",
 		"start:starter-ghtml": "bun run --filter @ecopages/starter-ghtml start | tee /dev/null",
