test: fixed fixture build

--- a/bunfig.toml
+++ b/bunfig.toml
@@ -1,6 +1,10 @@
 preload = ["@ecopages/bun-postcss-loader", "@ecopages/bun-mdx-kitajs-loader"]
 
 [test]
-preload = ["@ecopages/bun-postcss-loader", "@ecopages/bun-mdx-kitajs-loader"]
+preload = [
+  "./setup-test.ts",
+  "@ecopages/bun-postcss-loader",
+  "@ecopages/bun-mdx-kitajs-loader",
+]
 [install.scopes]
 "@jsr" = "https://npm.jsr.io"
